--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="dryer1">1번 건조기</string>
     <string name="dryer2">1번 건조기</string>
     <string name="dryer3">1번 건조기</string>
+    <string name="title_activity_splash_screen">SplashScreen</string>
+    <string name="title_activity_home_screen">HomeScreen</string>
+    <string name="title_activity_card_charge_screen">CardChargeScreen</string>
+    <string name="title_activity_setting_screen">SettingScreen</string>
 
 
 </resources>
